# quokkaq-kiosk-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-prod-release.yml
agent/: go.mod  main.go  printer.go  printer_unix.go  printer_windows.go
scripts/: build-agent.mjs  bump-version.mjs
src/: splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-kiosk.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-desktop-pairing.toml  allow-print-receipt.toml
src-tauri/src/: lib.rs  main.rs
