[package]
name = "quokkaq-kiosk-desktop"
version = "0.1.1"
description = "QuokkaQ kiosk shell (Tauri) with local print agent"
authors = ["QuokkaQ"]
edition = "2021"

[lib]
name = "quokkaq_kiosk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
